expanded tester to encode/decode the whole url input file in addition simplified logger.h

--- a/urlmatching2/src/easylogging.conf
+++ b/urlmatching2/src/easylogging.conf
@@ -1,6 +1,6 @@
 * GLOBAL:
    FORMAT               =  "%datetime %msg"
-   ##FILENAME             =  "logs/myeasylog.log"
+   FILENAME             =  "logs/myeasylog.log"
    ENABLED              =  true
    TO_FILE              =  true
    TO_STANDARD_OUTPUT   =  false
